--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,8 +4,8 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
-@import "../bower_components/foundation/scss/normalize";
-@import "../bower_components/foundation/scss/foundation";
+@import "normalize";
+@import "foundation";
 @import "variables";
 
 @import "homepage";
