--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,8 +4,7 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
-@import "normalize";
-@import "foundation";
+@import "skeleton";
 @import "variables";
 
 @import "homepage";
