--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,5 +16,8 @@
   $base-blue: #548699;
 
   //MAIN TYPEFACE
-  @import url(http://fonts.googleapis.com/css?family=Raleway:400,700,500);
+  @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,600);
   $main-typeface: 'Raleway';
+
+  //FONT SIZES
+  
