fixed some styleing

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,10 +10,12 @@
   //REDS
   $base-red: #CC0A32;
   
-
   //BLUES
   $light-blue: #0A96CC;
   $base-blue: #548699;
+
+  //WHITE
+  $base-white: #FFFFFF;
 
   //MAIN TYPEFACE
   @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,600);
