--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -3,27 +3,40 @@ body {
   font-family: $main-typeface;
 }
 
+h1, h2, h3, h4, h5, h6{ font-family: $main-typeface }
+
+a{ text-decoration: none; }
+
 .raise-good-homepage {
+  
   .main-nav-header {
+    
     .left-nav {
       float: left;
+        
         li{
-        display: inline;
+          display: inline;
+        
         a{
-        color: $base-red;
-        text-decoration: none; 
+          color: $base-red;
+          text-decoration: none; 
         } 
-        }
-      
+        
+      }  
     }
+    
     .right-nav {
       float: right; 
+      
       li {
         display: inline;
-      a {
-        text-decoration: none;
+      
+        a {
+          text-decoration: none;
+        }
+      
       }
-      }
+      
       .right-link {
         color: $base-red
       }
@@ -35,17 +48,20 @@ body {
     background-size:cover;
     width:100%;
     min-height:500px;
-      .main-header {
-        padding-top: 160px; 
-        text-align: center;
+      
+    .main-header {
+      padding-top: 160px; 
+      text-align: center;
+
+      .header-block-background{
+       
         h1 {
+          background-color: rgba(204,10,50, 0.7);
           color: #FFFFFF;
-        }
-        a {
-          text-decoration: none;
-          color: #FFFFFF;
+          padding: 0.2em 0.8em;
         }
       }
+    }
   }
 
   .features {
