--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3,7 +3,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,600);
-/* line 5, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1179,139 +1179,227 @@ input[type="checkbox"] {
 @media only screen and (max-width: 479px) {
   /* add code here */
 }
+/* line 3, ../sass/_buttons.scss */
+.button {
+  border: none;
+  border-radius: 3px;
+  color: #FFFFFF;
+  display: inline-block;
+  font-family: "Raleway";
+  font-size: 15px;
+  padding: 10px 20px;
+}
+/* line 12, ../sass/_buttons.scss */
+.button:hover {
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+}
+/* line 18, ../sass/_buttons.scss */
+.button:focus {
+  border: none;
+  outline: none;
+  text-decoration: none;
+}
+
+/* line 38, ../sass/_buttons.scss */
+.button-blue {
+  background-color: #548699;
+  color: #FFFFFF;
+}
+/* line 42, ../sass/_buttons.scss */
+.button-blue:hover {
+  background-color: #4b7889;
+  color: #FFFFFF;
+}
+
+/* line 38, ../sass/_buttons.scss */
+.button-red {
+  background-color: #CC0A32;
+  color: #FFFFFF;
+}
+/* line 42, ../sass/_buttons.scss */
+.button-red:hover {
+  background-color: #b7092d;
+  color: #FFFFFF;
+}
+
+/* line 52, ../sass/_buttons.scss */
+.button-small {
+  padding: 8px 10px !important;
+}
+
+/* line 53, ../sass/_buttons.scss */
+.button-nav {
+  padding: 12px 18px !important;
+}
+
+/* line 54, ../sass/_buttons.scss */
+.button-large {
+  font-size: 18px;
+  padding: 15px 40px !important;
+}
+
+/* line 55, ../sass/_buttons.scss */
+.button-long {
+  width: 100%;
+}
+
+/* line 60, ../sass/_buttons.scss */
+.button-center {
+  text-align: center;
+}
+
+/* line 61, ../sass/_buttons.scss */
+.button-left {
+  text-align: left;
+}
+
+/* line 62, ../sass/_buttons.scss */
+.button-right {
+  text-align: right;
+}
+
 /* line 2, ../sass/_homepage.scss */
 body {
   font-family: "Raleway";
 }
 
+/* line 6, ../sass/_homepage.scss */
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway";
+}
+
 /* line 8, ../sass/_homepage.scss */
+a {
+  text-decoration: none;
+}
+
+/* line 14, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .left-nav {
   float: left;
 }
-/* line 10, ../sass/_homepage.scss */
+/* line 17, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .left-nav li {
   display: inline;
 }
-/* line 12, ../sass/_homepage.scss */
+/* line 20, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .left-nav li a {
   color: #CC0A32;
   text-decoration: none;
 }
-/* line 19, ../sass/_homepage.scss */
+/* line 28, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav {
   float: right;
 }
-/* line 21, ../sass/_homepage.scss */
+/* line 31, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav li {
   display: inline;
 }
-/* line 23, ../sass/_homepage.scss */
+/* line 34, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav li a {
   text-decoration: none;
 }
-/* line 27, ../sass/_homepage.scss */
+/* line 40, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav .right-link {
   color: #CC0A32;
 }
-/* line 33, ../sass/_homepage.scss */
+/* line 46, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image {
   background: url(../images/raisegoodcover.png) no-repeat top center;
   background-size: cover;
   width: 100%;
   min-height: 500px;
 }
-/* line 38, ../sass/_homepage.scss */
+/* line 52, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image .main-header {
   padding-top: 160px;
   text-align: center;
 }
-/* line 41, ../sass/_homepage.scss */
-.raise-good-homepage .main-header-image .main-header h1 {
+/* line 58, ../sass/_homepage.scss */
+.raise-good-homepage .main-header-image .main-header .header-block-background h1 {
+  background-color: rgba(204, 10, 50, 0.7);
   color: #FFFFFF;
+  padding: 0.2em 0.8em;
 }
-/* line 44, ../sass/_homepage.scss */
-.raise-good-homepage .main-header-image .main-header a {
-  text-decoration: none;
-  color: #FFFFFF;
-}
-/* line 51, ../sass/_homepage.scss */
+/* line 67, ../sass/_homepage.scss */
 .raise-good-homepage .features {
   text-align: center;
 }
-/* line 53, ../sass/_homepage.scss */
+/* line 69, ../sass/_homepage.scss */
 .raise-good-homepage .features h3 {
   color: #548699;
   padding-top: 50px;
 }
-/* line 58, ../sass/_homepage.scss */
+/* line 74, ../sass/_homepage.scss */
 .raise-good-homepage .features .nav-link {
   font-size: 18px;
   text-decoration: none;
 }
-/* line 64, ../sass/_homepage.scss */
+/* line 80, ../sass/_homepage.scss */
 .raise-good-homepage .searchline {
   text-align: center;
 }
-/* line 66, ../sass/_homepage.scss */
+/* line 82, ../sass/_homepage.scss */
 .raise-good-homepage .searchline h4 {
   color: #548699;
   padding-top: 50px;
 }
-/* line 70, ../sass/_homepage.scss */
+/* line 86, ../sass/_homepage.scss */
 .raise-good-homepage .searchline a {
   text-decoration: none;
 }
-/* line 75, ../sass/_homepage.scss */
+/* line 91, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works {
   background-color: #548699;
   text-align: center;
 }
-/* line 79, ../sass/_homepage.scss */
+/* line 95, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works h3, .raise-good-homepage .how-it-works h4, .raise-good-homepage .how-it-works p {
   color: #FFFFFF;
 }
-/* line 84, ../sass/_homepage.scss */
+/* line 100, ../sass/_homepage.scss */
 .raise-good-homepage .quote-red-bg {
   background-color: #CC0A32;
 }
-/* line 89, ../sass/_homepage.scss */
+/* line 105, ../sass/_homepage.scss */
 .raise-good-homepage .final-cta {
   text-align: center;
 }
-/* line 91, ../sass/_homepage.scss */
+/* line 107, ../sass/_homepage.scss */
 .raise-good-homepage .final-cta h2 {
   color: #548699;
 }
-/* line 94, ../sass/_homepage.scss */
+/* line 110, ../sass/_homepage.scss */
 .raise-good-homepage .final-cta a {
   text-decoration: none;
 }
-/* line 99, ../sass/_homepage.scss */
+/* line 115, ../sass/_homepage.scss */
 .raise-good-homepage .footer {
   background-color: #d7d7d7;
 }
-/* line 101, ../sass/_homepage.scss */
+/* line 117, ../sass/_homepage.scss */
 .raise-good-homepage .footer .container {
   text-align: center;
 }
-/* line 103, ../sass/_homepage.scss */
+/* line 119, ../sass/_homepage.scss */
 .raise-good-homepage .footer .container h3 {
   color: #548699;
   text-align: center;
 }
-/* line 107, ../sass/_homepage.scss */
+/* line 123, ../sass/_homepage.scss */
 .raise-good-homepage .footer .container li {
   display: inline;
 }
-/* line 110, ../sass/_homepage.scss */
+/* line 126, ../sass/_homepage.scss */
 .raise-good-homepage .footer .container a {
   text-decoration: none;
 }
-/* line 114, ../sass/_homepage.scss */
+/* line 130, ../sass/_homepage.scss */
 .raise-good-homepage .footer img {
   max-width: 100%;
 }
-/* line 117, ../sass/_homepage.scss */
+/* line 133, ../sass/_homepage.scss */
 .raise-good-homepage .footer .nav-footer {
   color: #548699;
   text-align: center;
