--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -2,8 +2,8 @@
 
 	.button{
 		border: none;
-		border-radius: 3px;
-		color: $base-white;
+		border-radius: 15px;
+		color: $base-white!important;
 		display: inline-block;
 		font-family: $main-typeface;
 		font-size: 15px;
@@ -49,9 +49,9 @@
 
 	//BUTTON STYLES
 
-	.button-small{ padding:8px 10px !important; }
-	.button-nav{ padding:12px 18px !important; }
-	.button-large{ font-size: 18px; padding:15px 40px !important; }
+	.button-small{ padding:8px 10px !important; margin:1em;  }
+	.button-nav{ padding:12px 18px !important; margin:1em;  }
+	.button-large{ font-size: 18px; margin:1em; padding:15px 40px !important; }
 	.button-long{ width:100%; }
 
 
