--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3,7 +3,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,600);
-/* line 5, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../.rbenv/versions/2.1.1/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rbenv/versions/2.0.0-p247/lib/ruby/gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1182,8 +1182,8 @@ input[type="checkbox"] {
 /* line 3, ../sass/_buttons.scss */
 .button {
   border: none;
-  border-radius: 3px;
-  color: #FFFFFF;
+  border-radius: 15px;
+  color: #FFFFFF !important;
   display: inline-block;
   font-family: "Raleway";
   font-size: 15px;
@@ -1227,16 +1227,19 @@ input[type="checkbox"] {
 /* line 52, ../sass/_buttons.scss */
 .button-small {
   padding: 8px 10px !important;
+  margin: 1em;
 }
 
 /* line 53, ../sass/_buttons.scss */
 .button-nav {
   padding: 12px 18px !important;
+  margin: 1em;
 }
 
 /* line 54, ../sass/_buttons.scss */
 .button-large {
   font-size: 18px;
+  margin: 1em;
   padding: 15px 40px !important;
 }
 
@@ -1282,125 +1285,167 @@ a {
 /* line 17, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .left-nav li {
   display: inline;
+  margin-top: 0;
+  padding: 0 1em 0 1em;
 }
-/* line 20, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .left-nav li a {
+/* line 23, ../sass/_homepage.scss */
+.raise-good-homepage .main-nav-header .left-nav a {
   color: #CC0A32;
   text-decoration: none;
 }
-/* line 28, ../sass/_homepage.scss */
+/* line 30, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav {
   float: right;
 }
-/* line 31, ../sass/_homepage.scss */
+/* line 33, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav li {
   display: inline;
 }
-/* line 34, ../sass/_homepage.scss */
+/* line 36, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav li a {
   text-decoration: none;
 }
-/* line 40, ../sass/_homepage.scss */
+/* line 43, ../sass/_homepage.scss */
 .raise-good-homepage .main-nav-header .right-nav .right-link {
   color: #CC0A32;
 }
-/* line 46, ../sass/_homepage.scss */
+/* line 49, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image {
   background: url(../images/raisegoodcover.png) no-repeat top center;
   background-size: cover;
   width: 100%;
   min-height: 500px;
 }
-/* line 52, ../sass/_homepage.scss */
+/* line 55, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image .main-header {
-  padding-top: 160px;
+  padding-top: 230px;
   text-align: center;
 }
-/* line 58, ../sass/_homepage.scss */
+/* line 61, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image .main-header .header-block-background h1 {
   background-color: rgba(204, 10, 50, 0.7);
   color: #FFFFFF;
   padding: 0.2em 0.8em;
 }
-/* line 67, ../sass/_homepage.scss */
+/* line 70, ../sass/_homepage.scss */
 .raise-good-homepage .features {
   text-align: center;
 }
-/* line 69, ../sass/_homepage.scss */
+/* line 73, ../sass/_homepage.scss */
 .raise-good-homepage .features h3 {
   color: #548699;
   padding-top: 50px;
 }
-/* line 74, ../sass/_homepage.scss */
+/* line 77, ../sass/_homepage.scss */
+.raise-good-homepage .features img {
+  padding-top: 1em;
+  padding-bottom: 0;
+}
+/* line 82, ../sass/_homepage.scss */
 .raise-good-homepage .features .nav-link {
   font-size: 18px;
   text-decoration: none;
 }
-/* line 80, ../sass/_homepage.scss */
+/* line 88, ../sass/_homepage.scss */
 .raise-good-homepage .searchline {
   text-align: center;
+  padding-bottom: 1em;
 }
-/* line 82, ../sass/_homepage.scss */
+/* line 91, ../sass/_homepage.scss */
 .raise-good-homepage .searchline h4 {
   color: #548699;
-  padding-top: 50px;
+  padding-top: 1em;
 }
-/* line 86, ../sass/_homepage.scss */
+/* line 95, ../sass/_homepage.scss */
 .raise-good-homepage .searchline a {
   text-decoration: none;
 }
-/* line 91, ../sass/_homepage.scss */
+/* line 100, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works {
   background-color: #548699;
   text-align: center;
 }
-/* line 95, ../sass/_homepage.scss */
+/* line 104, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works h3, .raise-good-homepage .how-it-works h4, .raise-good-homepage .how-it-works p {
   color: #FFFFFF;
 }
-/* line 100, ../sass/_homepage.scss */
-.raise-good-homepage .quote-red-bg {
-  background-color: #CC0A32;
+/* line 108, ../sass/_homepage.scss */
+.raise-good-homepage .how-it-works h3 {
+  padding: 1em 0 0.5em 0;
+  font-weight: 600;
 }
-/* line 105, ../sass/_homepage.scss */
-.raise-good-homepage .final-cta {
-  text-align: center;
-}
-/* line 107, ../sass/_homepage.scss */
-.raise-good-homepage .final-cta h2 {
-  color: #548699;
-}
-/* line 110, ../sass/_homepage.scss */
-.raise-good-homepage .final-cta a {
-  text-decoration: none;
-}
-/* line 115, ../sass/_homepage.scss */
-.raise-good-homepage .footer {
-  background-color: #d7d7d7;
+/* line 112, ../sass/_homepage.scss */
+.raise-good-homepage .how-it-works h4 {
+  padding-bottom: 0.25em;
+  font-weight: 600;
 }
 /* line 117, ../sass/_homepage.scss */
-.raise-good-homepage .footer .container {
+.raise-good-homepage .how-it-works p {
+  padding: 0 1em 1em 1em;
+}
+/* line 122, ../sass/_homepage.scss */
+.raise-good-homepage .quote-red-bg {
+  background-color: #CC0A32;
+  min-height: 400px;
+  padding-top: 1em;
   text-align: center;
-}
-/* line 119, ../sass/_homepage.scss */
-.raise-good-homepage .footer .container h3 {
-  color: #548699;
-  text-align: center;
-}
-/* line 123, ../sass/_homepage.scss */
-.raise-good-homepage .footer .container li {
-  display: inline;
-}
-/* line 126, ../sass/_homepage.scss */
-.raise-good-homepage .footer .container a {
-  text-decoration: none;
 }
 /* line 130, ../sass/_homepage.scss */
-.raise-good-homepage .footer img {
-  max-width: 100%;
+.raise-good-homepage .scrolling-quote img {
+  float: left;
+  padding-bottom: 0;
 }
-/* line 133, ../sass/_homepage.scss */
-.raise-good-homepage .footer .nav-footer {
-  color: #548699;
+
+/* line 138, ../sass/_homepage.scss */
+.final-cta {
   text-align: center;
+  min-height: 225px;
+}
+/* line 141, ../sass/_homepage.scss */
+.final-cta h2 {
+  color: #548699;
+  padding-top: 1em;
+}
+/* line 145, ../sass/_homepage.scss */
+.final-cta a {
+  text-decoration: none;
+}
+
+/* line 150, ../sass/_homepage.scss */
+.footer {
+  background-color: #d7d7d7;
+}
+/* line 152, ../sass/_homepage.scss */
+.footer .container {
+  text-align: center;
+}
+/* line 154, ../sass/_homepage.scss */
+.footer .container h3 {
+  color: #548699;
+  padding-top: 1em;
+  padding-bottom: 0.5em;
+  text-align: center;
+}
+/* line 160, ../sass/_homepage.scss */
+.footer .container li {
+  display: inline;
+}
+/* line 163, ../sass/_homepage.scss */
+.footer .container a {
+  text-decoration: none;
+  padding: 0 1em;
+}
+/* line 169, ../sass/_homepage.scss */
+.footer .line {
+  max-width: 150%;
+}
+/* line 173, ../sass/_homepage.scss */
+.footer .nav-footer {
+  text-align: center;
+  font-size: 18px;
+}
+/* line 176, ../sass/_homepage.scss */
+.footer .nav-footer a {
+  color: #548699;
+  padding: 0.5em 1.5em;
 }
