signup page added

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -53,6 +53,7 @@
 	.button-nav{ padding:12px 18px !important; margin:1em;  }
 	.button-large{ font-size: 18px; margin:1em; padding:15px 40px !important; }
 	.button-long{ width:100%; }
+	.button-box{width: 25%}
 
 
 	//BUTTON POSITION
